# Parrot

./: .gitignore  README.md  README_en.md  main.py  mlog.py  path_manager.py  pyproject.toml  requirements.txt  train.py
app/: app_controller.py
app/callbacks/: __init__.py  history_callbacks.py
app/core/: api_manager.py  history_manager.py  model_manager.py  settings_manager.py  utils.py
app/ui/: __init__.py
app/ui/components/: pagination.py
app/ui/pages/: __init__.py
config/: roles.json
src/: main.py
src/app/: app_controller.py
src/app/callbacks/: clone_callbacks.py  history_callbacks.py  role_callbacks.py  settings_callbacks.py
src/app/core/: api_manager.py  audio_manager.py  db_manager.py  history_manager.py  logging_manager.py  mlog.py  model_manager.py  path_manager.py  role_manager.py  settings_manager.py  utils.py
src/app/ui/: menu.py  titlebar.py
src/app/ui/components/: pagination.py
src/app/ui/pages/: clone_page.py  history_page.py  roles_page.py  settings_page.py
