[project]
name = "Parrot"
version = "1.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "YiMing", email = "1790233968@qq.com" }
]
dependencies = [
  "flet==0.27.2",
  "flet_audio==0.1.0",
  "aiohttp",
  "websockets",
  "py7zr"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.parrot"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Parrot"

# company name to display in about app dialogs
company = "Parrot"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by YiMing"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.2",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.2"}

[tool.flet.splash]
color = "#FFFF00" # --splash-color
dark_color = "#86A79A" # --splash-dark-color
web = true # --no-web-splash
ios = true # --no-ios-splash
android = true # --no-android-splash